tests/error/auto_fail.gw
#! [contains] no match found for operator
var int i => var auto ae :=> var auto A;
